# tentris-license-aggregator

./: Cargo.toml  README.md  about.toml
src/: lib.rs  main.rs
